# m2-sim

./: .gitignore  CMakeLists.txt  README.md  build-windows.ps1  main.cpp
config/: config.ini  config_v2.ini
docs/: encoder_feedback.md  import_model.md  key_mouse.md
proto/pb_src/: pi_to_mw.proto
src/: observer.cpp  observer.h
src/models/: camera.cpp  robot.cpp  robot.h
src/networks/: feedbackSender.cpp  feedbackSender.h  receiver.cpp  sender.cpp  sender.h
src/qml/: Main.qml
src/qml/settings/: List.qml  MenuWrapper.qml  Setting.qml  ToggleSwitch.qml
src/qml/sim/: Control.qml  EmptyObjects.qml  Field.qml  GameObjects.qml  Lighting.qml  RobotInfo.qml  Sync.qml
src/qml/viz/: VObject.qml  View.qml
src/utils/: mathUtils.cpp  mathUtils.h
test/: feedback_wire_test.cpp
